Window button fix - better spacing

--- a/chrome/userChrome - WindowsTempFix.css
+++ b/chrome/userChrome - WindowsTempFix.css
@@ -189,7 +189,7 @@ Hopefully this theme is robust. I am happy with it at least
   }
   #nav-bar {
     margin-top: -40px;
-    margin-right: 120px;
+    margin-right: 150px;
     margin-left: 110px;
   }
   .titlebar-button {
